# spotty

./: Cargo.toml
src/: color.rs  config.rs  font.rs  grid.rs  inline.rs  inline_str.rs  log.rs  main.rs  render.rs  screen.rs  tty.rs  window.rs
src/font/: core_text.rs
src/render/: glyph_cache.rs  metal.rs  texture_atlas.rs
src/render/metal/: buffer.rs  shader.metal
src/tty/: control_code.rs
src/window/: cocoa.rs
