[package]
name = "spotty"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
cocoa = "0.24.0"
core-foundation = "0.9.1"
core-graphics = "0.22.2"
core-text = "19.2.0"
metal = "0.22.0"
nix = "0.21.0"
objc = { version = "0.2.7", features = ["exception"] }
thiserror = "1.0.25"
